# stream-manager

./: .gitignore  .pre-commit-config.yaml  Makefile  PRIVACY.md  README.md  StreamManager.spec  pyproject.toml
.github/workflows/: build.yml  ci.yml
assets/: icon.icns
scripts/: bump-version.sh  install-deps.sh
src/: run.py
src/streammanager/: app.py  main.py
src/streammanager/config/: config_manager.py
src/streammanager/models/: stream.py
src/streammanager/services/: facebook.py  interfaces.py  obs.py  rtmp_relay.py  youtube.py
src/streammanager/ui/: main_window.py
