[project]
name = "streammanager"
version = "0.1.0"
description = "OBS multi-platform stream manager for YouTube and Facebook"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.136.0",
    "google-auth-oauthlib>=1.2.0",
    "requests>=2.32.0",
    "obsws-python>=1.7.2",
    "python-dotenv>=1.0.1",
]

[project.scripts]
streammanager = "streammanager.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streammanager"]

[dependency-groups]
dev = [
    "pyinstaller>=6.10.0",
    "pre-commit>=3.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-requests>=2.32.0",
]

[tool.ruff]
line-length = 88
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
